# agentry-run-report

./: .gitignore  CHANGELOG.md  README.md  agentry-run-report.py  pyproject.toml
agentry_run_report/: __init__.py  __main__.py  report.py
examples/: build_sample_run.py  smoke.sh
examples/sample_run/: events.jsonl  fiscal.jsonl  handoff_ledger.jsonl  meta.json  trajectories.jsonl
tests/: test_report.py
