[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentry-run-report"
version = "0.1.2"
description = "Unified report generator for an Agentry run directory. Composes recorder, handoff, fiscal, and trajectory signals into one Markdown + JSON deliverable."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "OpenSeneca", email = "[email protected]" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
agentry-run-report = "agentry_run_report.__main__:main"

[tool.setuptools]
packages = ["agentry_run_report"]
